force-app/main/default/objects/Dev_File_Download__c/Dev_File_Download__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev File Downloads</label>
    <nameField>
        <displayFormat>DFDN-{00000}</displayFormat>
        <label>File Download ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev File Download</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>