force-app/main/default/objects/Dev_File_Download__c/fields/Dev_File__c.field-meta.xml
<CustomField>
    <fullName>Dev_File__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev File</label>
    <referenceTo>Dev_Files__c</referenceTo>
    <relationshipLabel>Dev File Download</relationshipLabel>
    <relationshipName>Dev_File_Download</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>