force-app/main/default/objects/Dev_File_Download__c/fields/Download_ID__c.field-meta.xml
<CustomField>
    <fullName>Download_ID__c</fullName>
    <externalId>true</externalId>
    <label>Download ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>